--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html.scrollStop {
   position: fixed;
   left: 0;
@@ -23,24 +24,17 @@ html.scrollStop body {
   padding: 0;
 }
 
-.impact {
-  font-family: sans-serif;
+html {
+  line-height: 1.8;
+  font-size: 16px;
+  color: #231815;
 }
 
-html,
 body {
   overscroll-behavior: none;
-  font-family: sans-serif;
-  line-height: 1.6;
-  font-size: 16px;
-  background-color: #000;
-  font-family: "Noto Sans JP", sans-serif;
-  font-weight: 600;
-  color: white;
 }
 
 @media screen and (max-width: 767px) {
-  html,
   body {
     font-size: 14px;
   }
@@ -138,8 +132,8 @@ img {
 input,
 textarea,
 select {
-  font-family: sans-serif;
-  font-weight: 400;
+  font-family: "游明朝体", "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", serif;
+  font-weight: 500;
 }
 
 .fadeInUp {
@@ -245,4 +239,9 @@ select {
   border-radius: 0;
   padding: 5px;
   font-size: 16px;
+}
+
+.ver-txt {
+  -ms-writing-mode: tb-rl;
+  writing-mode: vertical-rl;
 }
