--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,19 +26,16 @@ html {
   font-feature-settings: "palt" 1;
   padding: 0;
 }
-.impact {
-  font-family: sans-serif;
+
+html {
+  line-height: 1.8;
+  font-size: 16px;
+  color: $black;
 }
-html,
+
 body {
   overscroll-behavior: none;
-  font-family: sans-serif;
-  line-height: 1.6;
-  font-size: 16px;
-  background-color: #000;
-  font-family: "Noto Sans JP", sans-serif;
-  font-weight: 600;
-  color: white;
+
   @include max-screen(767px) {
     font-size: 14px;
   }
@@ -109,8 +106,8 @@ img {
 input,
 textarea,
 select {
-  font-family: sans-serif;
-  font-weight: 400;
+  font-family: "游明朝体", "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", serif;
+  font-weight: 500;
 }
 
 .fadeInUp {
@@ -209,4 +206,10 @@ select {
   border-radius: 0;
   padding: 5px;
   font-size: 16px;
+}
+
+
+.ver-txt{
+  -ms-writing-mode: tb-rl;
+	writing-mode: vertical-rl;
 }
